ch 5 comments, first part

--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -14,15 +14,15 @@ We recommend a step-wise approach for identifying LRPs, with the proportion of c
 
 ### Data Availability and Spatial Scale (Step 1)
 
-The first step is to compile CU-level data to support biological status assessments as described under the WSP [@holtIndicatorsStatusBenchmarks2009a; @holtEvaluatingBenchmarksBiological2018], where those data exist. These data include (but are not limited to) time-series of spawner abundances and biological benchmarks on spawner abundances. <!--CW: Maybe cite more data examples: time-series of spawner abundances, Spawner-recruit time-series, juvenile survival information, PNI estimates for the CUs, and previously published biological benchmarks-->  This step generally includes aggregating fine scale data on stocks <!-- KH: use 'steams' instead of more ambiguous 'stocks'?? CW: or could just remove and say aggregating fine scale data to the CU level--> or spawning sites to the CU level. 
+The first step is to compile CU-level data to support biological status assessments as described under the WSP [@holtIndicatorsStatusBenchmarks2009a; @holtEvaluatingBenchmarksBiological2018], where those data exist. These data include (but are not limited to) time-series of spawner abundances and biological benchmarks on spawner abundances. <!--CW: Maybe cite more data examples: time-series of spawner abundances, Spawner-recruit time-series, juvenile survival information, PNI estimates for the CUs, and previously published biological benchmarks-->  This step generally includes aggregating fine scale data on stocks <!-- KH: use 'streams' instead of more ambiguous 'stocks'?? CW: or could just remove and say aggregating fine scale data to the CU level--> or spawning sites to the CU level. 
 
-In some cases, spatial scales within CUs <!--KH: replace 'spatial scales within CUs' with 'a finer spatial scale than CU' --> (e.g., watersheds or subpopulations within CUs) may be considered to delineate serious harm to the SMU. Although CUs are the population unit of assessment and conservation required under the WSP, distribution of spawning within CUs, for example among watersheds, can be an important component of status [@holtIndicatorsStatusBenchmarks2009a] and these finer scales can be considered. 
+In some cases, spatial scales within CUs <!--KH: replace 'spatial scales within CUs' with 'a finer spatial scale than CU' --> (e.g., watersheds or subpopulations within CUs) may be considered to delineate serious harm to the SMU. Although CUs are the population unit of assessment and conservation required under the WSP, distribution of spawning within CUs, for example among watersheds, can be an important component of status [@holtIndicatorsStatusBenchmarks2009a] and these finer scales can be considered. <!-- LW: suggest putting 'for example, among watersheds' in brackets-->
 
-Distribution is a commonly cited component of salmon viability and recovery [@mcelhanyViableSalmonidPopulations2010]. When applied to the identification of recovery targets for Pacific salmon, @bradfordReviewBiologicalPrinciples2004 defined the relevant scale of distribution as spatial units that are demographically independent such that the  population dynamics of one unit are unlikely to affect the dynamics of another, but that genetic exchange is expected to occur at greater rates than observed among populations (CUs), and would likely exceed 10 effective migrants/generation. When applying these criteria to Interior Fraser River Coho salmon, @bradfordReviewBiologicalPrinciples2004 defined subpopulations on the basis of large watersheds or lakes, or partial barriers to migration. 
+Distribution is a commonly cited component of salmon viability and recovery [@mcelhanyViableSalmonidPopulations2010]. When applied to the identification of recovery targets for Pacific salmon, @bradfordReviewBiologicalPrinciples2004 defined the relevant scale of distribution as spatial units that are demographically independent such that the  population dynamics of one unit are unlikely to affect the dynamics of another, but that genetic exchange is expected to occur at greater rates than observed among populations (CUs), and would likely exceed 10 effective migrants/<!--LW: 'per'?-->generation. When applying these criteria to Interior Fraser River Coho salmon, @bradfordReviewBiologicalPrinciples2004 defined subpopulations on the basis of large watersheds or lakes, or partial barriers to migration. 
 
-We recommend that the decision on spatial scale of conservation for biological assessments be part of the peer-review process for CU and SMU assessments, and be based on biological principles of conservation and viability (e.g., as reviewed in @bradfordReviewBiologicalPrinciples2004 and @mcelhanyViableSalmonidPopulations2010). 
+We recommend that the decision on spatial scale of conservation for biological assessments be part of the peer-review process for CU and SMU assessments, and be based on biological principles of conservation and viability [e.g., as reviewed in @bradfordReviewBiologicalPrinciples2004 and @mcelhanyViableSalmonidPopulations2010]. 
 
-Within this step, information on hatchery enhancement is used to identify populations where production is dominated by hatchery-origin fish and PNI values are <0.5 (excluded from analyses) from those where production is dominated by natural-origin fish and PNI values are $\geqslant$ 0.5 (provisionally included in analyses) [@withlerGeneticallyBasedTargets2018]. Further, where time-series of the proportion of marked fish on the spawning grounds are available for hatchery-influenced systems dominated by natural production, these proportions can be used to identify time-series of natural-origin recruitment for benchmark estimation and natural-origin spawners for status assessment against benchmarks that are not sensitive to annual variation in hatchery production.  
+Within this step, information on hatchery enhancement is used to identify populations where production is dominated by hatchery-origin fish and PNI values are $<$0.5 (excluded from analyses) from those where production is dominated by natural-origin fish and PNI values are $\geqslant$0.5 [provisionally included in analyses, @withlerGeneticallyBasedTargets2018]. Further, where time-series of the proportion of marked fish on the spawning grounds are available for hatchery-influenced systems dominated by natural production<!--LW: 'natural spawners' or 'wild spawners'? production makes me think of hatcheries-->, these proportions can be used to identify time-series of natural-origin recruitment for benchmark estimation and natural-origin spawners for status assessment against benchmarks that are not sensitive to annual variation in hatchery production.  
 
 
 <!--KH: This sentence from above needs editing:
@@ -49,27 +49,29 @@ In addition, a CU may be data deficient if data to resolve the existence of the 
 ### Can Data Deficient CUs be Represented by CUs With Data? (Step 3)
 <!-- CH comment: send this section to Ron Kadowaki, Diana Dobson, and Brendan for review-->
 
-Third, the extent to which status of data deficient CUs can be inferred from CUs with data is evaluated. By definition, data deficient CUs do not have data on population dynamics to rigorously evaluate this inference through SMU-specific correlation analyses, though information on threats and biological characteristics may be available. To infer status for data deficient CUs, at a minimum we recommend providing evidence that: (i) the threats impacting data deficient CUs are likely to be the same as for CUs with data,  (ii) environmental drivers are also similar among CUs, e.g., as reflected by the distribution of CUs across biogeoclimatic and Marine Adaptive zones, (iii) biological characteristics, such as life-history type and dominant age-at-maturity of data-deficient CUs are represented in the CUs with data, and (iv) population capacity of data deficient CU is likely in the range of those represented by CUs with data. Evidence supporting these criteria should be clearly documented and reviewed by local experts. The burden of proof would be to identify that data deficient CUs have similar properties to neighbouring CUs, with the default assumption that each CU represents unique biodiversity where status and trends cannot be represented by other CUs. We describe the four criteria in more detail below.
+Third, the extent to which status of data deficient CUs can be inferred from CUs with data is evaluated. By definition, data deficient CUs do not have data on population dynamics to rigorously evaluate this inference through SMU-specific correlation analyses, though information on threats and biological characteristics may be available. To infer status for data deficient CUs, at a minimum we recommend providing evidence that: (i) the threats impacting data deficient CUs are likely to be the same as for CUs with data,<!--LW: suggest: CUs that are data deficient and those that have data are impacted by the same threats in similar magnitudes-->  (ii) environmental drivers are similar among CUs, e.g., as reflected by the distribution of CUs across biogeoclimatic and Marine Adaptive zones, (iii) biological characteristics, such as life-history type and dominant age-at-maturity of data-deficient CUs are represented in the CUs with data, and (iv) population capacity of data deficient CUs is likely in the range of those represented by CUs with data. Evidence supporting these criteria should be clearly documented and reviewed by local experts. The burden of proof would be to identify that data deficient CUs have similar properties to neighbouring CUs, with the default assumption that each CU represents unique biodiversity where status and trends cannot be represented by other CUs. We describe the four criteria in more detail below.
 
 
-**Threats** are defined here as any human activity or process that causes harm, death, or behavioural changes to a species, or the destruction, degradation, and/or impairment of its habitat, to the extent that population-level effects occur [@dfoGuidanceAssessingThreats2014]. Information on threats may be derived from published threats and habitat assessments, and may incorporate harvest, effects of land-use in freshwater and estuarine habitats, climate change, and genetic impacts from hatcheries. Because SMUs are defined as groups of CUs that are managed together with the objective of achieving a joint status, it is likely that CUs within an SMU will have similar vulnerabilities to fisheries. Data on genetic stock identification from fisheries can be used to further assess similarities in vulnerabilities in harvest. Beyond fisheries, CUs that are vulnerable to different threats in freshwater and marine environment within an SMU may have divergent statuses and trends.  
+**Threats** are defined here as any human activity <!-- could this also include natural processes and hazards (e.g., landslides)? Some processes could be not directly linked to human activity (e.g., scouring floods) but could be exacerbated by human activity (logging, climate change).-->or process that causes harm, death, or behavioural changes to a species, or the destruction, degradation, and/or impairment of its habitat, to the extent that population-level effects occur [@dfoGuidanceAssessingThreats2014]. Information on threats may be derived from published threats and habitat assessments, and may incorporate harvest, effects of land-use in freshwater and estuarine habitats, climate change, and genetic impacts from hatcheries. Because SMUs are defined as groups of CUs that are managed together with the objective of achieving a joint status, it is likely that CUs within an SMU will have similar vulnerabilities to fisheries. Data on genetic stock identification from fisheries can be used to further assess similarities in vulnerabilities in harvest. Beyond fisheries, CUs that are vulnerable to different threats in freshwater and marine environment within an SMU may have divergent statuses and trends.  
 
-
-Similarity in **environmental conditions and drivers** in estuarine and freshwater habitat as reflected in, for example, hydrological regimes and macroclimate in spawning and rearing areas. Differences in hydrological regimes, such as whether systems are fed by rainfall or snowmelt, can impact biological characteristics of Pacific salmon such as spawning time and age for Chinook Salmon, and can therefore impact status and trends [@beechieHydrologicRegimeConservation2006]. Broad similarities in macroclimate can be represented by Biogeoclimatic Zones, defined as "geographic areas having similar patterns of energy flow, vegetation and soils as a result of a broadly homogenous macroclimate." [@medingerEcosystemsBritishColumbia1991]<!--remove; (BC Ministry of Forestry 2021, https://www.for.gov.bc.ca/hfd/library/documents/glossary/Glossary.pdf). In other words, these terrestrial zones have relatively uniform climate and vegetation. There are approximately 18 biogeoclimatic zones in BC and the Yukon, ranging from Coastal Douglas-Fir on southeastern Vancouver Island to Boreal White and Black Spruce in northern BC. --> CUs with spawning and rearing grounds within different biogeoclimatic zones may experience different macroclimates and hence environmental drivers in estuaries and freshwater. Instead of biogeoclimatic zones, @holtbyConservationUnitsPacific2007 delineate freshwater ecological drainage units to differentiate freshwater ecosystems for Pacific salmon ("Freshwater Adaptive Zones", FAZ). These FAZs are defined primarily based on "Ecological Drainage Units" [@ministryoftheenvironmentEcologicalAquaticUnits2021] and consist of salmon populations with shared zoogeographic histories at relatively fine spatial scales. In some cases neighbouring CUs share a common FAZ (e.g., WCVI Chinook Salmon), but more often CUs tends to be associated with unique FAZs and therefore they may be less useful for identifying similarity in environmental conditions among CUs. Other levels of aggregation of Ecological Drainage Units could be developed in the future to inform similarities in freshwater conditions among CUs.  Overll, we recommend using a combination of variables (e.g, hydrological regimes, biogeoclimate zones, FAZs) when identifying similarities in freshwater conditions among CUs.
+<!--LW: Suggest moving last paragraph of this section to top as topic sentence of this section, it gives a good rationale for this section-->
+<!--LW: I reworked this sentence to try and give rationale--> Similar **environmental conditions and drivers** in freshwater and estuary habitats can relate to similar <!-- LW: maybe need an intermediate step in the logic, like similar habitat conditions -> similar biology/ exposure to threats -> similar status and trends-->status and trends in fish populations, such as CUs. <!--LW: could probably use some more refs here to strengthen the logic. I will look for some-->. This includes variations in the macroclimate in spawning and rearing areas and hydrologic regime (the typical pattern of annual river flow). For Chinook salmon, the hydrologic regime of their home rivers can be correlated with their return age, life history type, and spawn timing, and thus their exposure to different threats [@beechieHydrologicRegimeConservation2006]. Broad similarities in macroclimate can be represented by Biogeoclimatic Zones, defined as "geographic areas having similar patterns of energy flow, vegetation and soils as a result of a broadly homogenous macroclimate." [@medingerEcosystemsBritishColumbia1991]<!--remove; (BC Ministry of Forestry 2021, https://www.for.gov.bc.ca/hfd/library/documents/glossary/Glossary.pdf). In other words, these terrestrial zones have relatively uniform climate and vegetation. There are approximately 18 biogeoclimatic zones in BC and the Yukon, ranging from Coastal Douglas-Fir on southeastern Vancouver Island to Boreal White and Black Spruce in northern BC. --> CUs with spawning and rearing grounds within different biogeoclimatic zones may experience different macroclimates and hence environmental drivers in estuaries and freshwater. Instead of biogeoclimatic zones, @holtbyConservationUnitsPacific2007 delineate freshwater ecological drainage units to differentiate freshwater ecosystems for Pacific salmon ("Freshwater Adaptive Zones", FAZ). These FAZs are defined primarily based on "Ecological Drainage Units" [@ministryoftheenvironmentEcologicalAquaticUnits2021] and consist of salmon populations with shared zoogeographic histories at relatively fine spatial scales. In some cases neighbouring CUs share a common FAZ (e.g., WCVI Chinook Salmon), but more often CUs tends to be associated with unique FAZs and therefore they may be less useful for identifying similarity in environmental conditions among CUs. Other levels of aggregation of Ecological Drainage Units could be developed in the future to inform similarities in freshwater conditions among CUs. Overll, we recommend using a combination of variables (e.g, hydrologic regimes, biogeoclimate zones, FAZs) when identifying similarities in freshwater conditions among CUs.
+<!--LW: going back to Holtby and Ciruna, their FAZs are based on 'climate, drainage density, gradient, hydrological characteristics and connectivity' (p13). It could make sense to rearrange this paragraph to start with FAZs since they incorporate climate and hydrologic regime, and are what's partially used to inform CU development.-->
 
 To identify similarities in environmental conditions in the nearshore marine environment, @holtbyConservationUnitsPacific2007 describe Marine Adaptive Zones, MAZs, for Pacific salmon which reflect "watershed-coastal ecosystems of distinct physical characteristics, including the full sequence of riverine, estuarine, and near-short marine habitats used by juvenile anadromous salmonids". There are 12 MAZs for Pacific salmon in BC and the Yukon, ranging from the Strait of Georgia in the south to the Bering Sea in the north (COSEWIC 2021 in press)<!--footnote this if not published-->.
 
-Although SMUs are usually defined to be spatially cohesive groups of CUs and therefore component CUs may experience similar environmental conditions, SMUs and their component CUs often span multiple hydrological regimes, biogeoclimatic zones, FAZs or MAZs.  <!--CH: this last sentence is in response to Diana Dobson's comment that SMUs are defined to have CUs with similar characteristics, to an extent-->CUs containing unique environmental drivers within an SMU may have divergent statuses and trends from neighbouring CUs, either directly due to the different environments or their interaction with other natural drivers and anthropogenic threats.
+<!--LW: These last two sentences seem like they could be the topic sentence of this whole section (esp. the second sentence). They answer the 'why?' question that I was struggling with above--> Although SMUs are usually defined to be spatially cohesive groups of CUs and therefore component CUs may experience similar environmental conditions, SMUs and their component CUs often span multiple hydrologic regimes, biogeoclimatic zones, FAZs or MAZs.<!--LW: if using as topic sentence, suggest generalizing these four characteristics-->  <!--CH: this last sentence is in response to Diana Dobson's comment that SMUs are defined to have CUs with similar characteristics, to an extent-->CUs containing unique environmental drivers within an SMU may have divergent statuses and trends from neighbouring CUs, either directly due to the different environments or their interaction with other natural drivers and anthropogenic threats.
 
 
-CUs with similar **life-history characteristics** are more likely to respond to common threats and environmental drivers in the same way compared with those with divergent characteristics. For example, Chinook Salmon exhibit at least two distinct life-histories, named stream and ocean types. Stream-type fish rear for more than a year in freshwater and tend to migrate far offshore during their marine stage, whereas ocean-type fish migrate to the ocean as subyearlings (< 1 year) and tend to remain near shore during marine life. These different emigration patterns are believed to have evolved as a consequence of differences in food resources and survival rates in the freshwater and marine environments, and result in different vulnerabilities to physical and biological conditions in those environments.  CUs with different life-history characteristics cannot be used to represent each other under data deficiencies. In some cases, SMUs have been defined to account for differences in life-history in order to better achieve joint status under common management regime (e.g., Fraser Chinook where SMUs are defined in part based on dominant ages at maturity). In other SMUs, CUs with various life-history types are combined (e.g., the Mainland Inlet Chinook SMU which contains CUs with ocean and stream-type fish) <!--CH: to confirm with Diana and Ron. CU34-HOMATH (ocean-type) and CU35-KLINA (stream-type) both in Mainland Inlets CK SMU-->.
+CUs with similar **life-history characteristics** are more likely to respond to common threats and environmental drivers in the same way compared with those with divergent characteristics. For example, Chinook Salmon exhibit at least two distinct life-histories, named stream and ocean types. Stream-type fish rear for more than a year in freshwater and tend to migrate far offshore during their marine stage, whereas ocean-type fish migrate to the ocean as subyearlings (< 1 year) and tend to remain near shore during marine life. These different emigration patterns are believed to have evolved as a consequence of differences in food resources and survival rates in the freshwater and marine environments <!-- LW: ref? and also hydrology?-->, and result in different vulnerabilities to physical and biological conditions in those environments <!--ref? [@beechieHydrologicRegimeConservation2006] -->.  CUs with different life-history characteristics cannot be used to represent each other under data deficiencies. In some cases, SMUs have been defined to account for differences in life-history in order to better achieve joint status under common management regime (e.g., Fraser Chinook where SMUs are defined in part based on dominant ages at maturity). In other SMUs, CUs with various life-history types are combined (e.g., the Mainland Inlet Chinook SMU which contains CUs with ocean and stream-type fish)<!--CH: to confirm with Diana and Ron. CU34-HOMATH (ocean-type) and CU35-KLINA (stream-type) both in Mainland Inlets CK SMU-->.
 
-CUs with very different **population capacities** may respond differently to similar threats. For example, very small CUs may be more vulnerable to moderate fishing pressure if abundances drop below critical conservation thresholds, e.g., 1500 fish an abundance threshold within the Pacific Salmon Status Scanner, whereas very large CUs may be more resilient to common threats.    <!--CH: I think about COSEWIC criteria which identify DUs < 1000 as Threatened, and also DUs < 10,000 with declining trend as Threatened. For Pacific salmon, the habitat capacity of CUs can span this range (<1000 to >10,000) making some CUs inherently more vulnerable than others, presumably.-->
+CUs with very different **population capacities** may respond differently to similar threats. For example, very small CUs may be more vulnerable to moderate fishing pressure if abundances drop below critical conservation thresholds (e.g., 1500 fish, an abundance threshold within the Pacific Salmon Status Scanner), whereas very large CUs may be more resilient to common threats.    <!--CH: I think about COSEWIC criteria which identify DUs < 1000 as Threatened, and also DUs < 10,000 with declining trend as Threatened. For Pacific salmon, the habitat capacity of CUs can span this range (<1000 to >10,000) making some CUs inherently more vulnerable than others, presumably.-->
 <!--CW: I believe Luke also saw this effect in the Chum study case - i.e. smaller CUs were more likely to be below their benchmarks.-->
 
-<!--KH: Do we know what the 1500 used in the salmon scanner tool was based on? Was it a result from the decision tree analysis?  Or, was it picked a priori as a threshold based on some other rationale?  I'm wondering if it makes more sense to use the COSEWIC 1000 fish threshold for this example if it's somehow more firmly rooted in conservation theory / literature as a criticical threshold?  I'm not sure on this - just a thought.  -->
+<!--KH: Do we know what the 1500 used in the salmon scanner tool was based on? Was it a result from the decision tree analysis?  Or, was it picked a priori as a threshold based on some other rationale?  I'm wondering if it makes more sense to use the COSEWIC 1000 fish threshold for this example if it's somehow more firmly rooted in conservation theory / literature as a criticical threshold?  I'm not sure on this - just a thought.
+LW: using COSEWIC makes sense to me. -->
 
-Covariation in productivity is well documented among spatially proximate populations across species [@petermanPatternsCovariationSurvival1998; @pyperSpatialCovariationSurvival2002; @dornerSpatialTemporalPatterns2018], providing some support for the use of data-rich CUs to inform CUs without data. In a meta-analysis of spawner time-series across Pacific salmon species throughout BC using data extracted from the Pacific Salmon Explorer Tool [@pacificsalmonfoundationMethodsAssessingStatus2020],  pairwise correlations in spawner abundances among CUs within SMUs tended to be positive for Pink, Chum, Coho, and Sockeye Salmon (Appendix app:meta-analysis-appendix, Figure \@ref(lrp-smu-corr-plot)). For Chinook Salmon, correlations were more variable among CUs and sometimes negative, in part due to the influence of hatchery production in some of those systems. <!--CH: The 2 SMUs with negative correlations are Georgia Strait Chinook and Johnstone Strait/Mainland Inlet Chinook which have significant hatchery production, and my read of PSE report looks like they used total spawners, not natural-origin spawners--> A pervasive problem with correlation analyses for Pacific salmon is that populations with available time-series tend to be more heavily managed and may not be representative of those without data which tend to be remote and without direct management interventions. <!--CH remove: In addition, the four criteria described have not been accounted, and so correlations may be biased low.--> 
+Covariation in productivity is well documented among spatially proximate populations across species [@petermanPatternsCovariationSurvival1998; @pyperSpatialCovariationSurvival2002; @dornerSpatialTemporalPatterns2018], providing some support for the use of data-rich CUs to inform CUs without data. In a meta-analysis of spawner time-series across Pacific salmon species throughout BC using data extracted from the Pacific Salmon Explorer Tool [@pacificsalmonfoundationMethodsAssessingStatus2020],  pairwise correlations in spawner abundances among CUs within SMUs tended to be positive for Pink, Chum, Coho, and Sockeye Salmon (Appendix app:meta-analysis-appendix, Figure \@ref(fig:lrp-smu-corr-plot)). For Chinook Salmon, correlations were more variable among CUs and sometimes negative, in part due to the influence of hatchery production in some of those systems. <!--CH: The 2 SMUs with negative correlations are Georgia Strait Chinook and Johnstone Strait/Mainland Inlet Chinook which have significant hatchery production, and my read of PSE report looks like they used total spawners, not natural-origin spawners--> A pervasive problem with correlation analyses for Pacific salmon is that populations with available time-series tend to be more heavily managed and may not be representative of those without data which tend to be remote and without direct management interventions. <!--CH remove: In addition, the four criteria described have not been accounted, and so correlations may be biased low.--> 
 
 Overall, we suggest caution when representing SMU status with only a subset of CUs, and recommend evaluating and documenting the risks of incorrectly assigning status of data deficient CUs based on neighboring CUs. We also recommend further quantitative evaluation of these criteria using empirical data disaggregated into groups of CUs with similar environmental conditions, life-history types and management intensity, among other variables, and supported by simulation evaluation.  These criteria are not meant to be prescriptive, but to provide general guidelines for assessing possible inference for data deficient CUs. 
 
