Minor update to case study chapter 3

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -60,27 +60,23 @@ Interior Fraser Coho show a strong positive relationship between their spatial d
 
 We considered the 4 criteria identified in Holt et al. (in prep) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs; these criteria included similarity in (i) threats, (ii) environmental conditions and drivers, (iii) life history and (iv) population capacity. Although statuses are available for all CUs in this SMU, evaluation against these four criteria can inform the extent to which we would expect status against LRPs to be sensitive to omission of CUs. We also used sensivity analyses, presented below, to explore how removing one or two CUs affected LRP estimation and status assessments against the LRP.
 
-<!--CH addition: "Although statuses are avilable for all CUs in this SMU, in sensitivity anlayses we removed individual CUs from LRP estimation and status assessments. Evaluation against these four criteria can inform the extent to which we would expect status against LRPs to be sensitive to omission of CUs.
+In an assessment of threats for Interior Fraser Coho completed as part of the 2018 Recovery Potential Assessment, @arbeiderInteriorFraserCoho2020 ranked a comprehensive set of threats on a scale of high, medium, low, and unknown.  The dominant threats to this SMU are from activities related to forestry, forest fires, agriculture, and urban and rural development. Specific threats arising from these activities included the modification of catchment surfaces, effluents from agriculture and forestry, and linear development, which is defined as the straightening and channelization of streams [ @arbeiderInteriorFraserCoho2020]. While impacts from a given activity may be higher in some CUs than others, the interconnected threats stemming from multiple activities, as well as cumulative impacts, mean that it is hard to isolate one CU that experiences threats differently than another. Furthermore,  extensive agricultural and linear development in the lower Fraser River, which all Interior Fraser Coho smolts migrate through, and a proportion of juveniles rear in, means that there is a possibility that all CUs are affected by threats stemming from agriculture and linear development.
 
-KH: I have added the last two sentence to the above paragraph to make this addition.
--->
-
-In an assessment of threats for Interior Fraser Coho completed as part of the 2018 Recovery Potential Assessment, @arbeiderInteriorFraserCoho2020 ranked a comprehensive set of threats on a scale of high, medium, low, and unknown.  The dominant threats to this SMU are from activities related to forestry, forest fires, agriculture, and urban and rural development. Specific threats arising from these activities included the modification of catchment surfaces, effluents from agriculture and forestry, and linear development, which is defined as the straightening and channelization of streams [ @arbeiderInteriorFraserCoho2020]. While impacts from a given activity may be higher in some CUs that others, the interconnected threats stemming from any one activity, as well as cumulative impacts, mean that it is hard to isolate one CU that experiences threats differently than another. Furthermore,  extensive agricultural and linear development in the lower Fraser River, which all Interior Fraser Coho smolts migrate through, and a proportion of juveniles rear in, means that there is a possibility that all CUs are affected by threats stemming from agriculture and linear development.
-
-When evaluating the similarity of environmental conditions and drivers among CUs, we looked to multiple ecosystem classification schemes.  The first scheme, Marine Adaptive Zones, applies to the riverine, estuarine, and marine habitats utilized by juveniles, and were used to inform CU delineation [@holtbyConservationUnitsPacific2007]. For Interior Fraser Coho, all CUs belongs to the same Marine Adaptive Zone, Georgia Strait, suggesting that environmental conditions and drivers in these habitats are shared among all CUs.  The second scheme, Freshwater Adaptive Zones, represents the freshwater ecological drainage units, and was also used to delineate CUs [@holtbyConservationUnitsPacific2007]. For Interior Fraser Coho, each CU belongs to a unique FAZ, which is often (but not always) the case with CU delineation.  Finally, we looked at Biogeoclimatic Zones derived from vegetation classification. All five Interior Fraser Coho CUs included a mix of Biogeoclimatic Zones with Interior vegetation, including Interior Douglas Fir, Bunchgrass, Montane Spruce, and Engelmann Spruce.  The Middle Fraser CU included some boreal vegetation zones, such as Sub-Boreal Pine and Sub-Boreal Pine--Spruce.  The Fraser Canyon CU was the only CU that included a more coastal vegetation type, Coastal Western Hemlock. However, it is not well understood how this difference would affect environmental conditions and drivers.  More work is needed to better understand whether these differences are substantial enough to affect the representativeness of CUs.
+When evaluating the similarity of environmental conditions and drivers among CUs, we looked to multiple ecosystem classification schemes.  The first scheme, Marine Adaptive Zones, applies to the riverine, estuarine, and marine habitats utilized by juveniles, and were used to inform CU delineation [@holtbyConservationUnitsPacific2007]. For Interior Fraser Coho, all CUs belongs to the same Marine Adaptive Zone, Georgia Strait, suggesting that environmental conditions and drivers in these habitats are shared among all CUs.  The second scheme, Freshwater Adaptive Zones (FAZ), represents the freshwater ecological drainage units, and was also used to delineate CUs [@holtbyConservationUnitsPacific2007]. For Interior Fraser Coho, each CU belongs to a unique FAZ, which is often (but not always) the case with CU delineation.  Finally, we looked at Biogeoclimatic Zones <!-- citation needed-->derived from vegetation classification. All five Interior Fraser Coho CUs included a mix of Biogeoclimatic Zones with Interior vegetation, including Interior Douglas Fir, Bunchgrass, Montane Spruce, and Engelmann Spruce.  The Middle Fraser CU included some boreal vegetation zones, such as Sub-Boreal Pine and Sub-Boreal Pine--Spruce.  The Fraser Canyon CU was the only CU that included a more coastal vegetation type, Coastal Western Hemlock. However, it is not well understood how this difference would affect environmental conditions and drivers.  More work is needed to better understand whether these differences are substantial enough to affect the representativeness of CUs.
 
 All Interior Fraser Coho CUs have the same predominantly 3-year life history, with the proportion maturing at age 3 similar among CUs.   
 
 Finally, we use the estimated S~REP~, which is the spawner abundance at which the stock replaces itself, from a base Ricker model fit (described below and shown in Appendix \@ref(app:coho-appendix)) to look for differences in habitat capacity among CUs. S~REP~ values ranged from 4023 (Fraser Canyon CU) to 14,595 (North Thompson CU), with S~REP~ values for the other three CUs evenly spaced within this range (Middle Fraser  = 6925, Lower Thompson = 8614, South Thompson = 10,498).  Given that there was no clear outlier in terms of extremely low or extremely high capacity, it is unclear whether these five CUs would respond differently to threats based on habitat capacity alone.
 
-Based on similarities in threats, environmental conditions, life history, and habitat capacity, we found no significant indicators that would prevent us from inferring CU status for one CU from neighboring CUs, especially when data from several other CUs are available to represent the missing CU. While these CUs are similar on these criteria, random variability in population dynamics among CUs can result in differences in status over time. We also note that the Fraser Canyon CU may be the most unique in terms of it having the smallest capacity and a more coastal dominated biogeoclimatic zone, so special consideration may be given to cases in which CU-level data is missing from Fraser Canyon.
+
+Based on similarities in threats, life history, population capacity, and some shared environmental drivers (i.e., lower Fraser River, estuary, and marine environments), we found few significant indicators that would prevent us from inferring CU status for one CU from neighboring CUs, especially when data from several other CUs are available to represent the missing CU. However, the large diversity in environmental conditions on land, Biogeoclimatic zones, and unique weather events, combined with the generally large areas encompassed by each CU, does require careful consideration when inferring CU status. For example, consideration may be required when environmental catastrophes occur that only impact individual CUs, or parts of CUs, such as landslides, floods, droughts, and forest fires; depending on the duration of the impacts of such events.  An example of a recent catastrophic event is the Big Bar landslide, which only impacted one subpopulation within the Middle Fraser CU.  If the impacts of this slide persist without mitigation, the status of the Middle Fraser CU would likely not be coupled with adjacent CUs. We also note that the Fraser Canyon CU may be the most unique in terms of it having the smallest capacity and a more coastal dominated biogeoclimatic zone, so special consideration may be given to cases in which CU-level data is missing from Fraser Canyon.
 
 
 <!--CH: I think we can omit the Fraser Canyon sentence; any special characteristics for that CU are not shown in the results. 
 
 LW: I would be inclined to keep the Fraser Canyon note, seems relevant to this section, even if there isn't a direct implication on resutls. 
 
-KH: I will wait to get feedback from Michael Arbeider to see if he has any thoughts on the Fraser Canyon CU being a bit distinct.
+KH: Michael has agreed with Fraser Canyon being a bit of an outlier in his mind, so I have left it as it.  I also added some additional text suggested by Michael about environmental catastrophies. (As an aside, I can' believe I had neglected to think about big bar for the Middle Fraser CU ...Michael added some text on this)
 
 -->
 
